# tMock-Server

./: .gitignore  CMakeLists.txt  Color.hpp  Configs.hpp  Player.cpp  Player.hpp  README.md  main.cpp  messages.h  server-config.json
.github/workflows/: cdebug-cmake-single-platform.yml  debug-cmake-single-platform.yml  test-workflow.yml
classes/: BaseMessage.cpp  Exception.cpp  Exception.hpp  InitMessage.cpp  InitMessage.hpp  Log.cpp  Log.h  Log.hpp  Messages.hpp  Socket.cpp  Socket.h  Socket.hpp
classes/messages/: BaseMessage.cpp  BaseMessage.hpp  ConnectRequest.cpp  ConnectRequest.hpp  FatalErrorMessage.cpp  FatalErrorMessage.hpp  RecievePasswordMessage.cpp  RecievePasswordMessage.hpp  RequestPasswordMessage.cpp  RequestPasswordMessage.hpp
dev_resources/: TNP_Communication.txt
enums/: AddressFamily.h  AdressFamily.h  ConnectionType.h  MessageTypes.h  TextModes.h
networking/: AddressFamily.hpp  CMakeLists.txt  ConnectionType.hpp  Exception.cpp  Exception.hpp  Socket.cpp  Socket.hpp
packets/: CMakeLists.txt  Packets.hpp
packets/classes/: BaseMessage.cpp  BaseMessage.hpp  BasePacket.cpp  BasePacket.hpp  ConnectRequest.cpp  ConnectRequest.hpp  FatalError.cpp  FatalError.hpp  RequestPassword.cpp  RequestPassword.hpp  SendPassword.cpp  SendPassword.hpp
packets/classes/client/: ConnectRequest.cpp  ConnectRequest.hpp  SendPassword.cpp  SendPassword.hpp
packets/classes/server/: ConnectionApproved.cpp  ConnectionApproved.hpp  FatalError.cpp  FatalError.hpp  RequestPassword.cpp  RequestPassword.hpp
packets/enums/: NetworkTextMode.hpp  PacketType.hpp
resources/: TNP_Communication.txt  TNP_Communication_Map.drawio  terraria_messages_analize.txt
structs/: messages.hpp
